--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,64 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": [
+        "next/core-web-vitals",
+        "prettier"
+    ],
+    "plugins": [
+        "react",
+        "@typescript-eslint",
+        "prettier"
+    ],
+    "rules": {
+        "camelcase": "error",
+        "no-console": "warn",
+        "no-floating-decimal": "error",
+        "no-sequences": "error",
+        "curly": "off",
+        "no-lonely-if": "error",
+        "one-var-declaration-per-line": "error",
+        "@next/next/no-img-element": "error",
+        "react-hooks/rules-of-hooks": "off",
+        "@typescript-eslint/consistent-type-exports": "error",
+        "@typescript-eslint/consistent-type-imports": "error",
+        "func-style": "error",
+        "no-debugger": "warn",
+        "no-empty": "error",
+        "semi": [
+            "warn",
+            "never"
+        ],
+        "newline-before-return": "error",
+        "newline-after-var": "error",
+        "space-in-parens": "error",
+        "react/jsx-wrap-multilines": "off",
+        "react/no-unescaped-entities": 0,
+        "quotes": [
+            "error",
+            "single",
+            {
+                "allowTemplateLiterals": false,
+                "avoidEscape": true
+            }
+        ],
+        "array-callback-return": "off",
+        "prettier/prettier": [
+            "warn",
+            {
+                "endOfLine": "auto",
+                "printWidth": 250,
+                "trailingComma": "none",
+                "tabWidth": 4,
+                "semi": false,
+                "singleQuote": true,
+                "jsxSingleQuote": true,
+                "arrowParens": "always",
+                "bracketSameLine": false
+            }
+        ]
+    },
+    "parserOptions": {
+        "project": [
+            "./tsconfig.json"
+        ]
+    }
 }
