--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@sambirsb/uikit": "^0.2.7",
     "ethers": "^6.11.1",
     "formik": "^2.4.5",
     "ky": "^1.2.0",
